--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="card-body d-flex flex-column"> {# Use flex for button at bottom #}
                     <h5 class="card-title text-center text-muted mb-3">For growing needs & businesses</h5>
-                    <h4 class="card-title text-center mb-3">~$5 / month <small class="text-muted">USD</small></h4>
+                    <h4 class="card-title text-center mb-3">$5 / month <small class="text-muted">USD</small></h4>
                     <ul class="list-unstyled mt-3 mb-4">
                         <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i><strong>15</strong> Forms</li>
                         <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i><strong>1,000</strong> Submissions / Month</li>
