--- a/templates/layout.html
+++ b/templates/layout.html
@@ -133,7 +133,7 @@
                      {# Link to privacy policy route #}
                     <li class="mb-2"><a href="{{ url_for('privacy_policy') }}" class="text-muted text-decoration-none">Privacy Policy</a></li>
                      {# Plain text for Terms of Service per last request #}
-                    <li class="mb-2"><a href="{{ url_for('terms') }}" class="text-muted text-decoration-none">Terms of Service</a></li>
+                    <li class="mb-2"><a href="{{ url_for('terms_of_service') }}" class="text-muted text-decoration-none">Terms of Service</a></li>
                 </ul>
             </div>
         </div>
