--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
     {# Placeholder for GIF / Carousel / Key Screenshots #}
     <div class="row justify-content-center">
       <div class="col-lg-9">
-         <img src="https://via.placeholder.com/900x500/f7f7f7/cccccc?text=GIF+or+Screenshot+Showing+Builder"
+         <video ="{{ url_for('static', filename='images/video.jpeg') }}
               alt="Demonstration of the easy-to-use form builder interface"
               class="img-fluid rounded border shadow-sm">
          {# Replace with your actual GIF or image later #}
