--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -50,8 +50,10 @@
                         <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i><strong>15</strong> Forms</li>
                         <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i><strong>1,000</strong> Submissions / Month</li>
                          <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i>Remove "Powered By" Branding</li>
-                        <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i>Email Notifications</li>
-                        <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i>Download Submission Data</li>
+                        <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i>Email Notifications (on new submission)</li>
+                        <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i>Custom Redirect URL (after submission)</li>
+                        <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i>Export Submissions to CSV</li>
+                        <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i>Send Data via Webhooks</li>
                         <li class="d-flex align-items-center mb-2"><i class="bi bi-check-circle-fill text-success me-2"></i>All Free Features</li>
                         <li class="d-flex align-items-center mb-2"><i class="bi bi-plus-circle text-muted me-2"></i>More features coming...</li> {# Use text-muted icon #}
                     </ul>
