--- a/templates/edit_form.html
+++ b/templates/edit_form.html
@@ -89,8 +89,8 @@
                         </select>
                     </div>
                     <div class="col-md-3">
-                        <label for="field_options" class="form-label">Options <small>(comma-separated)</small></label>
-                        <input type="text" class="form-control" id="field_options" name="field_options">
+                        <label for="field_options" class="form-label">Options <small>(Use | separator)</small></label>
+                        <input type="text" class="form-control" id="field_options" name="field_options" placeholder="Option 1|Option 2|Option 3">
                     </div>
                     <div class="col-md-auto">
                         <div class="form-check mb-1">
