--- a/templates/edit_field.html
+++ b/templates/edit_field.html
@@ -28,8 +28,8 @@
         </div>
          <div class="row g-3 mb-4"> {# New row for options/required #}
              <div class="col-md-9">
-                <label for="field_options" class="form-label">Options <small>(comma-separated)</small></label>
-                <input type="text" class="form-control" id="field_options" name="field_options" value="{{ field.options or '' }}">
+                <label for="field_options" class="form-label">Options <small>(Use | separator for Select/Radio)</small></label>
+                <input type="text" class="form-control" id="field_options" name="field_options" value="{{ field.options or '' }}" placeholder="Option 1|Option 2|Option 3">
             </div>
              <div class="col-md-3 d-flex align-items-end">
                 <div class="form-check pb-1">
