--- a/templates/layout.html
+++ b/templates/layout.html
@@ -230,6 +230,8 @@
   });
 </script>
 
+<script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
+
 {# Page-specific scripts block (e.g., for pricing page button listener) #}
 {% block scripts %}{% endblock %}
 
