--- a/templates/layout.html
+++ b/templates/layout.html
@@ -122,8 +122,8 @@
                  <h6 class="text-uppercase fw-bold text-dark mb-3">Resources</h6>
                  <ul class="list-unstyled small">
                     <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Blog</a></li> {# Placeholder Link #}
-                    <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Help Center</a></li> {# Placeholder Link #}
                     <li class="mb-2"><a href="/#use-cases" class="text-muted text-decoration-none">Use Cases</a></li>
+                    <li class="mb-2"><a href="{{ url_for('contact') }}" class="text-muted text-decoration-none">Contact Us</a></li>
                 </ul>
             </div>
              {# Column 4: Legal #}
