--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,7 +22,16 @@
                     {# Embed the FormGen form using an iframe #}
                     <div class="card shadow-sm">
                         <div class="card-body p-4"> {# Added padding #}
-                            <iframe src="http://form-generator.up.railway.app/form/sZ6YD2jtolUIhBK36_Nrgg" width="100%" height="600" frameborder="0" title="Contact Us">Loading...</iframe>
+                            <iframe
+                                {# --- MODIFY THIS LINE --- #}
+                                src="{{ url_for('public_form', form_key=contact_form_key, _external=True, _scheme='https') }}"
+                                {# --- END MODIFICATION --- #}
+                                width="100%"
+                                height="650" {# Adjust height as needed #}
+                                frameborder="0"
+                                title="Contact Us Form"
+                                style="border: 1px solid #dee2e6; border-radius: 0.375rem;"
+                            >Loading contact form...</iframe>
                         </div>
                     </div>
                 {% else %}
